--- a/custom_components/versatile_thermostat/translations/it.json
+++ b/custom_components/versatile_thermostat/translations/it.json
@@ -5,7 +5,7 @@
     "step": {
       "user": {
         "title": "Tipo di Versatile Thermostat",
-        "description": "Scegliere il tipo di termostato che si desidera creare&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/fr/creation.md)",
+        "description": "Scegliere il tipo di termostato che si desidera creare&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/en/creation.md)",
         "data": {
           "thermostat_type": "Tipo di termostato"
         },
@@ -30,6 +30,7 @@
           "advanced": "Parametri avanzati",
           "auto_start_stop": "Auto start and stop",
           "valve_regulation": "Configurazione della regolazione della valvola",
+          "sync_device_internal_temp": "Sincronizza la temperatura del dispositivo",
           "lock": "Blocco",
           "finalize": "Fatto",
           "configuration_not_complete": "Configurazione non completata"
@@ -97,6 +98,7 @@
           "heater_keep_alive": "Intervallo di mantenimento della connessione in secondi",
           "proportional_function": "Algoritmo",
           "ac_mode": "Modo AC",
+          "sync_device_internal_temp": "Sincronizzare la temperatura interna del dispositivo",
           "auto_regulation_mode": "Auto-regolazione",
           "auto_regulation_dtemp": "Regulazione soglia",
           "auto_regulation_periode_min": "Periodo minimo di regolazione",
@@ -113,6 +115,7 @@
           "heater_keep_alive": "Intervallo di aggiornamento dello stato dell'interruttore del riscaldatore opzionale. Lasciare vuoto se non richiesto.",
           "proportional_function": "Algoritmo da utilizzare (TPI è l'unico disponibile al momento)",
           "ac_mode": "Utilizzare la modalità Aria condizionata (AC)",
+          "sync_device_internal_temp": "Configurazione per sincronizzare la temperatura interna dei dispositivi sottostanti con le entità selezionate",
           "auto_regulation_mode": "Correzione automatica della temperatura desiderata",
           "auto_regulation_dtemp": "La soglia in ° (o % per la valvola) al di sotto della quale la variazione di temperatura non verrà inviata",
           "auto_regulation_periode_min": "Durata in minuti tra due aggiornamenti della regolazione",
@@ -240,7 +243,7 @@
       },
       "central_boiler": {
         "title": "Controllo della caldaia centralizzata",
-        "description": "Inserisci i servizi da chiamare per accendere/spegnere la caldaia centralizzata. Il servizio chiamato deve essere formattato come segue: `entity_id/nome_servizi[/attributo:valore]` (/attributo:valore è facoltativo)\nAd esempio:\n- per accendere un interruttore: `switch.controle_chaudiere/switch.turn_on`\n- per spegnere un interruttore: `switch.controle_chaudiere/switch.turn_off`\n- per programmare la caldaia a 25° e quindi forzarne l'accensione: `climate.thermostat_chaudiere/climate.set_temperature/temperature:25`\n- per inviare 10° alla caldaia e quindi forzarne lo spegnimento: `climate. thermostat_chaudiere/climate.set_temperature/temperature:10`&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/fr/feature-central-boiler.md)",
+        "description": "Inserisci i servizi da chiamare per accendere/spegnere la caldaia centralizzata. Il servizio chiamato deve essere formattato come segue: `entity_id/nome_servizi[/attributo:valore]` (/attributo:valore è facoltativo)\nAd esempio:\n- per accendere un interruttore: `switch.controle_chaudiere/switch.turn_on`\n- per spegnere un interruttore: `switch.controle_chaudiere/switch.turn_off`\n- per programmare la caldaia a 25° e quindi forzarne l'accensione: `climate.thermostat_chaudiere/climate.set_temperature/temperature:25`\n- per inviare 10° alla caldaia e quindi forzarne lo spegnimento: `climate. thermostat_chaudiere/climate.set_temperature/temperature:10`&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/en/feature-central-boiler.md)",
         "data": {
           "central_boiler_activation_service": "Comando per accendere",
           "central_boiler_deactivation_service": "Comando per spegnere",
@@ -254,7 +257,7 @@
       },
       "valve_regulation": {
         "title": "Auto-regolazione con valvola",
-        "description": "Configurazione per l'autoregolazione con controllo diretto della valvola&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/fr/self-regulation.md# auto-regolazione-tramite-controllo-diretto-della-valvola)",
+        "description": "Configurazione per l'autoregolazione con controllo diretto della valvola&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/en/self-regulation.md# auto-regolazione-tramite-controllo-diretto-della-valvola)",
         "data": {
           "offset_calibration_entity_ids": "Entità di calibrazione offset",
           "opening_degree_entity_ids": "Entità del grado di apertura",
@@ -269,13 +272,30 @@
           "proportional_function": "Algoritmo da utilizzare (TPI è l'unico disponibile al momento)",
           "min_opening_degrees": "Valore minimo del grado di apertura per ciascun dispositivo sottostante, separato da virgola. Il valore predefinito è 0. Esempio: 20, 25, 30"
         }
+      },
+      "sync_device_internal_temp": {
+        "title": "Synchronize device internal temperature",
+        "description": "Configuration to synchronize the internal temperature of the underlying devices with selected entities&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/en/feature-sync_device_temp.md)",
+        "data": {
+          "sync_with_calibration": "Apply offset calibration",
+          "sync_entity_ids": "Entities id used for synchronization"
+        },
+        "data_description": {
+          "sync_with_calibration": "Check to apply the offset calibration when synchronizing the internal temperature. Uncheck to directly copy the temperature from the selected entities",
+          "sync_entity_ids": "The list of the entities used to synchronize the internal temperature of the underlying devices. There should be one per underlying device. Should be a calibration entity if checkbox is selected or a temperature entity otherwise. Both are `number` entities."
+        }
       }
     },
     "error": {
       "unknown": "Errore inatteso",
       "unknown_entity": "Entity id sconosciuto",
       "window_open_detection_method": "È necessario utilizzare un solo metodo di rilevamento delle finestre aperte. Utilizzare il sensore della finestra o il rilevamento automatico tramite soglia di temperatura, ma non entrambi",
-      "no_central_config": "Non è possibile selezionare “usa configurazione centralizzata” perché non è stata trovata alcuna configurazione centralizzata. È necessario creare un Versatile Thermostat di tipo “Configurazione centralizzata” per poterlo utilizzare."
+      "no_central_config": "Non è possibile selezionare “usa configurazione centralizzata” perché non è stata trovata alcuna configurazione centralizzata. È necessario creare un Versatile Thermostat di tipo “Configurazione centralizzata” per poterlo utilizzare.",
+      "service_configuration_format": "Il formato della configurazione del servizio è errato",
+      "valve_regulation_nb_entities_incorrect": "Il numero di entità della valvola per la regolazione delle valvole deve essere pari al numero dei sottostanti",
+      "sync_device_internal_temp_nb_entities_incorrect": "Il numero di entità per sincronizzare la temperatura interna del dispositivo dovrebbe essere uguale al numero dei sottostanti",
+      "min_opening_degrees_format": "È richiesto un elenco di numeri interi positivi separati da virgola. Esempio: 20, 25, 30",
+      "vswitch_configuration_incorrect": "La configurazione della personalizzazione dei comandi non è corretta. È obbligatoria per i sottostanti non switch e il formato deve essere ‘nome_servizio[/attributo:valore]’. Maggiori informazioni nel README."
     },
     "abort": {
       "already_configured": "Il dispositivo è gia configurato"
@@ -286,7 +306,7 @@
     "step": {
       "user": {
         "title": "Tipo - {name}",
-        "description": "Scegliere il tipo di termostato che si desidera creare&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/fr/creation.md)",
+        "description": "Scegliere il tipo di termostato che si desidera creare&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/en/creation.md)",
         "data": {
           "thermostat_type": "Tipo di termostato"
         },
@@ -311,6 +331,7 @@
           "advanced": "Parametri avanzati",
           "auto_start_stop": "Auto start and stop",
           "valve_regulation": "Configurazione della regolazione della valvola",
+          "sync_device_internal_temp": "Sincronizza la temperatura del dispositivo",
           "lock": "Gestione del blocco",
           "finalize": "Fatto",
           "configuration_not_complete": "Configurazione non completata"
@@ -378,6 +399,7 @@
           "heater_keep_alive": "Intervallo di mantenimento della connessione in secondi",
           "proportional_function": "Algoritmo",
           "ac_mode": "Modo AC",
+          "sync_device_internal_temp": "Sincronizzare la temperatura interna del dispositivo",
           "auto_regulation_mode": "Auto-regolazione",
           "auto_regulation_dtemp": "Regulazione soglia",
           "auto_regulation_periode_min": "Periodo minimo di regulazione",
@@ -394,6 +416,7 @@
           "heater_keep_alive": "Intervallo di aggiornamento dello stato dell'interruttore del riscaldatore opzionale. Lasciare vuoto se non richiesto.",
           "proportional_function": "Algoritmo da utilizzare (TPI è l'unico disponibile al momento)",
           "ac_mode": "Utilizzare la modalità Aria condizionata (AC)",
+          "sync_device_internal_temp": "Configurazione per sincronizzare la temperatura interna dei dispositivi sottostanti con le entità selezionate",
           "auto_regulation_mode": "Correzione automatica della temperatura desiderata",
           "auto_regulation_dtemp": "La soglia in ° (o % per la valvola) al di sotto della quale la variazione di temperatura non verrà inviata",
           "auto_regulation_periode_min": "Durata in minuti tra due aggiornamenti della regolazione",
@@ -525,7 +548,7 @@
       },
       "central_boiler": {
         "title": "Controllo della caldaia centralizzata - {name}",
-        "description": "Inserire i servizi da chiamare per accendere/spegnere la caldaia centralizzata. Il servizio chiamato deve essere formattato come segue: `entity_id/nome_servizi[/attributo:valore]` (/attributo:valore è facoltativo)\nAd esempio:\n- per accendere un interruttore: `switch.controle_chaudiere/switch.turn_on`\n- per spegnere un interruttore: `switch.controle_chaudiere/switch.turn_off`\n- per programmare la caldaia a 25° e quindi forzarne l'accensione: `climate.thermostat_chaudiere/climate.set_temperature/temperature:25`\n- per inviare 10° alla caldaia e quindi forzarne lo spegnimento: `climate. thermostat_chaudiere/climate.set_temperature/temperature:10`&nbsp;[![?]https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/fr/feature-central-boiler.md)",
+        "description": "Inserire i servizi da chiamare per accendere/spegnere la caldaia centralizzata. Il servizio chiamato deve essere formattato come segue: `entity_id/nome_servizi[/attributo:valore]` (/attributo:valore è facoltativo)\nAd esempio:\n- per accendere un interruttore: `switch.controle_chaudiere/switch.turn_on`\n- per spegnere un interruttore: `switch.controle_chaudiere/switch.turn_off`\n- per programmare la caldaia a 25° e quindi forzarne l'accensione: `climate.thermostat_chaudiere/climate.set_temperature/temperature:25`\n- per inviare 10° alla caldaia e quindi forzarne lo spegnimento: `climate. thermostat_chaudiere/climate.set_temperature/temperature:10`&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/en/feature-central-boiler.md)",
         "data": {
           "central_boiler_activation_service": "Comando per accendere",
           "central_boiler_deactivation_service": "Comando per spegnere",
@@ -539,7 +562,7 @@
       },
       "valve_regulation": {
         "title": "Auto-regolazione con valvola - {name}",
-        "description": "Configurazione per l'autoregolazione con controllo diretto della valvola&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/fr/self-regulation.md# auto-regolazione-tramite-controllo-diretto-della-valvola)",
+        "description": "Configurazione per l'autoregolazione con controllo diretto della valvola&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/en/self-regulation.md# auto-regolazione-tramite-controllo-diretto-della-valvola)",
         "data": {
           "offset_calibration_entity_ids": "Entità di calibrazione offset",
           "opening_degree_entity_ids": "Entità del grado di apertura",
@@ -554,6 +577,18 @@
           "proportional_function": "Algoritmo da utilizzare (TPI è l'unico disponibile al momento)",
           "min_opening_degrees": "Valore minimo del grado di apertura per ciascun dispositivo sottostante, separato da virgola. Il valore predefinito è 0. Esempio: 20, 25, 30"
         }
+      },
+      "sync_device_internal_temp": {
+        "title": "Synchronize device internal temperature",
+        "description": "Configuration to synchronize the internal temperature of the underlying devices with selected entities&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/en/feature-sync_device_temp.md)",
+        "data": {
+          "sync_with_calibration": "Apply offset calibration",
+          "sync_entity_ids": "Entities id used for synchronization"
+        },
+        "data_description": {
+          "sync_with_calibration": "Check to apply the offset calibration when synchronizing the internal temperature. Uncheck to directly copy the temperature from the selected entities",
+          "sync_entity_ids": "The list of the entities used to synchronize the internal temperature of the underlying devices. There should be one per underlying device. Should be a calibration entity if checkbox is selected or a temperature entity otherwise. Both are `number` entities."
+        }
       }
     },
     "error": {
@@ -563,6 +598,7 @@
       "no_central_config": "Non è possibile selezionare “usa configurazione centralizzata” perché non è stata trovata alcuna configurazione centralizzata. È necessario creare un Versatile Thermostat di tipo “Configurazione centralizzata” per poterlo utilizzare.",
       "service_configuration_format": "Il formato della configurazione del servizio è errato",
       "valve_regulation_nb_entities_incorrect": "Il numero di entità della valvola per la regolazione delle valvole deve essere pari al numero dei sottostanti",
+      "sync_device_internal_temp_nb_entities_incorrect": "Il numero di entità per sincronizzare la temperatura interna del dispositivo dovrebbe essere uguale al numero dei sottostanti",
       "min_opening_degrees_format": "È richiesto un elenco di numeri interi positivi separati da virgola. Esempio: 20, 25, 30",
       "vswitch_configuration_incorrect": "La configurazione della personalizzazione dei comandi non è corretta. È obbligatoria per i sottostanti non switch e il formato deve essere ‘nome_servizio[/attributo:valore]’. Maggiori informazioni nel README."
     },
